output/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: test-ingress-all-hosts
  namespace: default
spec:
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: test-service
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/app-protocols: '{"80":"HTTPS"}'
  name: test-service
  namespace: default
spec:
  ports:
  - appProtocol: HTTPS
    port: 80
    targetPort: 0
status:
  loadBalancer: {}
