output/nginx-traffic-control-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: filters.example.com
    name: filters-example-com-http
    port: 80
    protocol: HTTP
  - hostname: secure-backend.example.com
    name: secure-backend-example-com-http
    port: 80
    protocol: HTTP
  - hostname: timeouts.example.com
    name: timeouts-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: filters-filters-example-com
spec:
  hostnames:
  - filters.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: filter-svc
      port: 80
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replaceFullPath: /new/$1
          type: ReplaceFullPath
    - requestHeaderModifier:
        set:
        - name: Host
          value: backend.internal
      type: RequestHeaderModifier
    matches:
    - path:
        type: PathPrefix
        value: /opts/(.*)
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: backend-protocol-https-secure-backend-example-com
spec:
  hostnames:
  - secure-backend.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: secure-svc
      port: 443
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: timeouts-timeouts-example-com
spec:
  hostnames:
  - timeouts.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: timeout-svc
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      backendRequest: 30s
      request: 1m0s
status:
  parents: []
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/app-protocols: '{"443":"HTTPS"}'
  name: secure-svc
spec:
  ports:
  - appProtocol: HTTPS
    name: port-443
    port: 443
    targetPort: 0
status:
  loadBalancer: {}
